# eat_she

./: .gitignore  CMakeLists.txt
include/: Food.h  Game.h  Point.h  Snake.h
src/: Food.cpp  Game.cpp  Snake.cpp  main.cpp
